⚙️fix > second endpoint Ticker ——————————————————— - fix: sidebar closing mode - fix: update on param change

--- a/atkm/src/app/core/tools/console-logger.config.symbols.json
+++ b/atkm/src/app/core/tools/console-logger.config.symbols.json
@@ -2,9 +2,53 @@
   "airplane": { "char": "✈", "description": "Airplane" },
   "anchor": { "char": "⚓", "description": "Anchor" },
   "atom": { "char": "⚛", "description": "Atom symbol" },
+  "alien": { "char": "👽", "description": "Alien face" },
+  "approximatelyEqual": { "char": "≈", "description": "Approximately equal" },
+  "apple": { "char": "🍎", "description": "Red apple" },
+  "arrowCircleLeft": { "char": "↺", "description": "Counterclockwise arrow" },
+  "arrowCircleRight": { "char": "↻", "description": "Clockwise arrow" },
+  "arrowLeft": { "char": "←", "description": "Left arrow" },
+  "arrowRight": { "char": "→", "description": "Right arrow" },
+  "arrowUp": { "char": "↑", "description": "Up arrow" },
+  "arrowDown": { "char": "↓", "description": "Down arrow" },
+  "arrowUpDown": { "char": "↕", "description": "Up-down arrow" },
+  "arrowLeftRight": { "char": "↔", "description": "Left-right arrow" },
   "biohazard": { "char": "☣", "description": "Biohazard" },
   "blackCircle": { "char": "●", "description": "Black circle" },
   "blackStar": { "char": "★", "description": "Black star" },
+  "bishop": { "char": "♝", "description": "Bishop" },
+  "blackDiamond": { "char": "◆", "description": "Black diamond" },
+  "blackRightArrow": { "char": "➤", "description": "Black right arrow" },
+  "blackSquare": { "char": "■", "description": "Black square" },
+  "blackTriangle": { "char": "▲", "description": "Black triangle" },
+  "bullet": { "char": "•", "description": "Bullet" },
+  "bulletPoint": { "char": "‣", "description": "Bullet point" },
+  "baby": { "char": "👶", "description": "Baby" },
+  "balance": { "char": "⚖", "description": "Scales / Balance" },
+  "battery": { "char": "🔋", "description": "Battery" },
+  "bell": { "char": "🔔", "description": "Bell" },
+  "blackHeart": { "char": "🖤", "description": "Black heart" },
+  "book": { "char": "📖", "description": "Open book" },
+  "bookmark": { "char": "🔖", "description": "Bookmark" },
+  "bolt": { "char": "⚡", "description": "Lightning bolt" },
+  "bomb": { "char": "💣", "description": "Bomb" },
+  "camera": { "char": "📷", "description": "Camera" },
+  "car": { "char": "🚗", "description": "Automobile" },
+  "cassette": { "char": "📼", "description": "Video cassette" },
+  "cat": { "char": "🐱", "description": "Cat face" },
+  "chessPawn": { "char": "♟", "description": "Chess pawn" },
+  "coin": { "char": "🪙", "description": "Coin" },
+  "compass": { "char": "🧭", "description": "Compass" },
+  "christcross": { "char": "✝", "description": "Christian cross" },
+  "crossbones": { "char": "☠", "description": "Skull and crossbones" },
+  "crown": { "char": "👑", "description": "Crown" },
+  "cube": { "char": "🧊", "description": "Ice cube / Cube" },
+  "check": { "char": "✔", "description": "Check mark" },
+  "checkbox": { "char": "☑", "description": "Checkbox" },
+  "copyright": { "char": "©", "description": "Copyright" },
+  "cubeRoot": { "char": "∛", "description": "Cube root" },
+  "curvedLeftArrow": { "char": "↩", "description": "Curved left arrow" },
+  "curvedRightArrow": { "char": "↪", "description": "Curved right arrow" },
   "checkMark": { "char": "✔", "description": "Check mark" },
   "cloud": { "char": "☁", "description": "Cloud" },
   "club": { "char": "♣", "description": "Club suit" },
@@ -14,74 +58,58 @@
   "degree": { "char": "°", "description": "Degree sign" },
   "diamond": { "char": "♦", "description": "Diamond suit" },
   "downArrow": { "char": "↓", "description": "Down arrow" },
-  "eightSpokedAsterisk": { "char": "✳", "description": "Eight-spoked asterisk" },
-  "exclamation": { "char": "❗", "description": "Exclamation mark" },
-  "female": { "char": "♀", "description": "Female sign" },
-  "fire": { "char": "🔥", "description": "Fire" },
-  "flower": { "char": "❀", "description": "Flower symbol" },
-  "gear": { "char": "⚙", "description": "Gear / Cogwheel" },
-  "heart": { "char": "♥", "description": "Heart suit" },
-  "infinity": { "char": "∞", "description": "Infinity" },
-  "lightning": { "char": "⚡", "description": "High voltage / Lightning bolt" },
-  "male": { "char": "♂", "description": "Male sign" },
-  "medicalCross": { "char": "✚", "description": "Medical cross" },
-  "moon": { "char": "☽", "description": "Moon (alternate crescent)" },
-  "musicalNote": { "char": "♪", "description": "Musical note" },
-  "peace": { "char": "☮", "description": "Peace symbol" },
-  "phone": { "char": "☎", "description": "Telephone" },
-  "plusMinus": { "char": "±", "description": "Plus-minus sign" },
-  "radiation": { "char": "☢", "description": "Radiation hazard" },
-  "recycling": { "char": "♻", "description": "Recycling symbol" },
-  "registered": { "char": "®", "description": "Registered sign" },
-  "scissors": { "char": "✂", "description": "Scissors" },
-  "skull": { "char": "☠", "description": "Skull and crossbones" },
-  "snowflake": { "char": "❄", "description": "Snowflake" },
-  "sparkle": { "char": "✨", "description": "Sparkles / Glint" },
-  "spade": { "char": "♠", "description": "Spade suit" },
-  "star": { "char": "☆", "description": "White star" },
-  "sun": { "char": "☀", "description": "Sun" },
-  "thermometer": { "char": "🌡", "description": "Thermometer" },
-  "tm": { "char": "™", "description": "Trademark" },
-  "umbrella": { "char": "☂", "description": "Umbrella" },
-  "upArrow": { "char": "↑", "description": "Up arrow" },
-  "warning": { "char": "⚠", "description": "Warning" },
-  "wheel": { "char": "☸", "description": "Wheel of Dharma (Dharmachakra)" },
-  "whiteCircle": { "char": "○", "description": "White circle" },
-  "yinYang": { "char": "☯", "description": "Yin Yang symbol" },
-  "zodiacAries": { "char": "♈", "description": "Zodiac sign Aries" },
-  "zodiacPisces": { "char": "♓", "description": "Zodiac sign Pisces" },
-
-  "approximatelyEqual": { "char": "≈", "description": "Approximately equal" },
-  "bishop": { "char": "♝", "description": "Bishop" },
-  "blackDiamond": { "char": "◆", "description": "Black diamond" },
-  "blackRightArrow": { "char": "➤", "description": "Black right arrow" },
-  "blackSquare": { "char": "■", "description": "Black square" },
-  "blackTriangle": { "char": "▲", "description": "Black triangle" },
-  "bullet": { "char": "•", "description": "Bullet" },
-  "bulletPoint": { "char": "‣", "description": "Bullet point" },
-  "check": { "char": "✔", "description": "Check mark" },
-  "checkbox": { "char": "☑", "description": "Checkbox" },
-  "copyright": { "char": "©", "description": "Copyright" },
-  "cubeRoot": { "char": "∛", "description": "Cube root" },
-  "curvedLeftArrow": { "char": "↩", "description": "Curved left arrow" },
-  "curvedRightArrow": { "char": "↪", "description": "Curved right arrow" },
   "diamondBullet": { "char": "❥", "description": "Diamond bullet" },
   "division": { "char": "÷", "description": "Division sign" },
   "dollar": { "char": "$", "description": "Dollar" },
   "doubleLeftArrow": { "char": "⇐", "description": "Double left arrow" },
   "doubleRightArrow": { "char": "⇒", "description": "Double right arrow" },
+  "dagger": { "char": "†", "description": "Dagger" },
+  "dice": { "char": "🎲", "description": "Game die" },
+  "document": { "char": "📄", "description": "Document page" },
+  "dog": { "char": "🐶", "description": "Dog face" },
+  "doubleArrowLeft": { "char": "⇐", "description": "Double left arrow" },
+  "doubleArrowRight": { "char": "⇒", "description": "Double right arrow" },
+  "doubleArrowUp": { "char": "⇑", "description": "Double up arrow" },
+  "doubleArrowDown": { "char": "⇓", "description": "Double down arrow" },
+  "droplet": { "char": "💧", "description": "Droplet" },
+  "earthGlobe": { "char": "🌍", "description": "Earth globe Europe-Africa" },
+  "electricPlug": { "char": "🔌", "description": "Electric plug" },
+  "email": { "char": "✉", "description": "Envelope / Email" },
+  "eye": { "char": "👁", "description": "Eye" },
   "emptyStar": { "char": "☆", "description": "Empty star" },
   "envelope": { "char": "✉", "description": "Envelope" },
   "equal": { "char": "=", "description": "Equal sign" },
   "euro": { "char": "€", "description": "Euro" },
+  "eightSpokedAsterisk": { "char": "✳", "description": "Eight-spoked asterisk" },
+  "exclamation": { "char": "❗", "description": "Exclamation mark" },
+  "filmCamera": { "char": "🎥", "description": "Movie camera" },
+  "flag": { "char": "🚩", "description": "Triangular flag" },
+  "flashlight": { "char": "🔦", "description": "Flashlight" },
+  "floppyDisk": { "char": "💾", "description": "Floppy disk / Save icon" },
+  "female": { "char": "♀", "description": "Female sign" },
+  "fire": { "char": "🔥", "description": "Fire" },
+  "flower": { "char": "❀", "description": "Flower symbol" },
   "filledStar": { "char": "★", "description": "Filled star" },
   "fourthRoot": { "char": "∜", "description": "Fourth root" },
+  "ghost": { "char": "👻", "description": "Ghost" },
+  "globe": { "char": "🌐", "description": "Globe with meridians" },
   "greaterThanOrEqual": { "char": "≥", "description": "Greater than or equal" },
+  "gear": { "char": "⚙", "description": "Gear / Cogwheel" },
   "hourglass": { "char": "⌛", "description": "Hourglass" },
   "hourglassEmpty": { "char": "⏳", "description": "Hourglass empty" },
+  "heart": { "char": "♥", "description": "Heart suit" },
+  "hammer": { "char": "🔨", "description": "Hammer / Tool" },
   "integral": { "char": "∫", "description": "Integral" },
+  "infinity": { "char": "∞", "description": "Infinity" },
   "king": { "char": "♚", "description": "King" },
   "knight": { "char": "♞", "description": "Knight" },
+  "key": { "char": "🔑", "description": "Key" },
+  "lamp": { "char": "💡", "description": "Light bulb / Idea" },
+  "leaf": { "char": "🍃", "description": "Leaf fluttering in wind" },
+  "link": { "char": "🔗", "description": "Link symbol" },
+  "lock": { "char": "🔒", "description": "Padlock (locked)" },
+  "lockOpen": { "char": "🔓", "description": "Padlock (open)" },
+  "lightning": { "char": "⚡", "description": "High voltage / Lightning bolt" },
   "lessThanOrEqual": { "char": "≤", "description": "Less than or equal" },
   "leftArrow": { "char": "←", "description": "Left arrow" },
   "leftRightArrow": { "char": "↔", "description": "Left-right arrow" },
@@ -89,12 +117,33 @@
   "longLeftRightArrow": { "char": "⟷", "description": "Long left-right arrow" },
   "longRightArrow": { "char": "⟶", "description": "Long right arrow" },
   "multiplication": { "char": "×", "description": "Multiplication sign" },
+  "male": { "char": "♂", "description": "Male sign" },
+  "medicalCross": { "char": "✚", "description": "Medical cross" },
+  "moon": { "char": "☽", "description": "Moon (alternate crescent)" },
+  "musicalNote": { "char": "♪", "description": "Musical note" },
+  "magnifier": { "char": "🔍", "description": "Magnifying glass" },
+  "magnet": { "char": "🧲", "description": "Magnet" },
+  "map": { "char": "🗺", "description": "World map" },
+  "megaphone": { "char": "📣", "description": "Megaphone" },
+  "microscope": { "char": "🔬", "description": "Microscope" },
+  "moneyBag": { "char": "💰", "description": "Money bag" },
+  "mountain": { "char": "⛰", "description": "Mountain" },
+  "newspaper": { "char": "📰", "description": "Newspaper" },
   "notEqual": { "char": "≠", "description": "Not equal" },
+  "peace": { "char": "☮", "description": "Peace symbol" },
+  "phone": { "char": "☎", "description": "Telephone" },
+  "plusMinus": { "char": "±", "description": "Plus-minus sign" },
   "pound": { "char": "£", "description": "Pound" },
   "pawn": { "char": "♟", "description": "Pawn" },
   "pencil": { "char": "✏", "description": "Pencil" },
   "pi": { "char": "π", "description": "Pi" },
   "proportionalTo": { "char": "∝", "description": "Proportional to" },
+  "pen": { "char": "🖊", "description": "Pen" },
+  "pill": { "char": "💊", "description": "Pill / Capsule" },
+  "power": { "char": "⏻", "description": "Power symbol" },
+  "printer": { "char": "🖨", "description": "Printer" },
+  "puzzlePiece": { "char": "🧩", "description": "Puzzle piece" },
+  "question": { "char": "❓", "description": "Question mark" },
   "queen": { "char": "♛", "description": "Queen" },
   "radioactive": { "char": "☢", "description": "Radioactive" },
   "rain": { "char": "🌧", "description": "Rain" },
@@ -102,6 +151,26 @@
   "redCross": { "char": "❌", "description": "Red cross" },
   "rightArrow": { "char": "→", "description": "Right arrow" },
   "rook": { "char": "♜", "description": "Rook" },
+  "radiation": { "char": "☢", "description": "Radiation hazard" },
+  "recycling": { "char": "♻", "description": "Recycling symbol" },
+  "registered": { "char": "®", "description": "Registered sign" },
+  "rainbow": { "char": "🌈", "description": "Rainbow" },
+  "robot": { "char": "🤖", "description": "Robot face" },
+  "rocket": { "char": "🚀", "description": "Rocket" },
+  "ruler": { "char": "📏", "description": "Straight ruler" },
+  "satellite": { "char": "🛰", "description": "Satellite" },
+  "scales": { "char": "⚖", "description": "Scales of justice" },
+  "shield": { "char": "🛡", "description": "Shield" },
+  "speaker": { "char": "🔊", "description": "Speaker with sound waves" },
+  "spiral": { "char": "➰", "description": "Curly loop" },
+  "starOfDavid": { "char": "✡", "description": "Star of David" },
+  "scissors": { "char": "✂", "description": "Scissors" },
+  "skull": { "char": "☠", "description": "Skull and crossbones" },
+  "snowflake": { "char": "❄", "description": "Snowflake" },
+  "sparkle": { "char": "✨", "description": "Sparkles / Glint" },
+  "spade": { "char": "♠", "description": "Spade suit" },
+  "star": { "char": "☆", "description": "White star" },
+  "sun": { "char": "☀", "description": "Sun" },
   "section": { "char": "§", "description": "Section" },
   "shootingStar": { "char": "🌠", "description": "Shooting star" },
   "skullAndCrossbones": { "char": "☠", "description": "Skull and crossbones" },
@@ -117,10 +186,29 @@
   "thunderstorm": { "char": "⛈", "description": "Thunderstorm" },
   "trademark": { "char": "™", "description": "Trademark" },
   "triangleBullet": { "char": "‣", "description": "Triangle bullet" },
+  "thermometer": { "char": "🌡", "description": "Thermometer" },
+  "tm": { "char": "™", "description": "Trademark" },
+  "target": { "char": "🎯", "description": "Target" },
+  "temperature": { "char": "🌡", "description": "Thermometer" },
+  "toolbox": { "char": "🧰", "description": "Toolbox" },
+  "trash": { "char": "🗑", "description": "Wastebasket" },
+  "tree": { "char": "🌳", "description": "Tree" },
+  "umbrella": { "char": "☂", "description": "Umbrella" },
   "upDownArrow": { "char": "↕", "description": "Up-down arrow" },
+  "upArrow": { "char": "↑", "description": "Up arrow" },
+  "unlocked": { "char": "🔓", "description": "Unlocked padlock" },
+  "videoCamera": { "char": "📹", "description": "Video camera" },
+  "warning": { "char": "⚠", "description": "Warning" },
+  "waterWave": { "char": "🌊", "description": "Water wave" },
+  "wrench": { "char": "🔧", "description": "Wrench" },
+  "wheel": { "char": "☸", "description": "Wheel of Dharma (Dharmachakra)" },
+  "whiteCircle": { "char": "○", "description": "White circle" },
   "whiteDiamond": { "char": "◇", "description": "White diamond" },
   "whiteSquare": { "char": "□", "description": "White square" },
   "whiteTriangle": { "char": "△", "description": "White triangle" },
   "wideRightArrow": { "char": "➔", "description": "Wide right arrow" },
-  "yen": { "char": "¥", "description": "Yen" }
+  "yen": { "char": "¥", "description": "Yen" },
+  "yinYang": { "char": "☯", "description": "Yin Yang symbol" },
+  "zodiacAries": { "char": "♈", "description": "Zodiac sign Aries" },
+  "zodiacPisces": { "char": "♓", "description": "Zodiac sign Pisces" }
 }
