--- a/atkm/src/app/core/tools/console-logger.config.colors.json
+++ b/atkm/src/app/core/tools/console-logger.config.colors.json
@@ -1,64 +1,126 @@
 {
   "F0F8FF": { "hex": "#F0F8FF", "description": "Alice blue" },
   "FAEBD7": { "hex": "#FAEBD7", "description": "Antique white" },
+  "7FFFD4": { "hex": "#7FFFD4", "description": "Aquamarine" },
   "F5F5DC": { "hex": "#F5F5DC", "description": "Beige" },
+  "FFE4C4": { "hex": "#FFE4C4", "description": "Bisque" },
+  "000000": { "hex": "#000000", "description": "Black" },
+  "FFEBCD": { "hex": "#FFEBCD", "description": "Blanched almond" },
+  "0000FF": { "hex": "#0000FF", "description": "Blue" },
+  "8A2BE2": { "hex": "#8A2BE2", "description": "Blue violet" },
   "A52A2A": { "hex": "#A52A2A", "description": "Brown" },
+  "DEB887": { "hex": "#DEB887", "description": "Burly wood" },
   "16c60c": { "hex": "#16c60c", "description": "Bright green" },
   "E81123": { "hex": "#E81123", "description": "Bright red" },
   "FFFF30": { "hex": "#FFFF30", "description": "Bright yellow" },
-  "000000": { "hex": "#000000", "description": "Black" },
-  "00FFFF": { "hex": "#00FFFF", "description": "Cyan" },
+  "5F9EA0": { "hex": "#5F9EA0", "description": "Cadet blue" },
+  "7FFF00": { "hex": "#7FFF00", "description": "Chartreuse" },
+  "D2691E": { "hex": "#D2691E", "description": "Chocolate" },
   "FF7F50": { "hex": "#FF7F50", "description": "Coral" },
+  "6495ED": { "hex": "#6495ED", "description": "Cornflower blue" },
+  "FFF8DC": { "hex": "#FFF8DC", "description": "Cornsilk" },
+  "00FFFF": { "hex": "#00FFFF", "description": "Cyan" },
   "DC143C": { "hex": "#DC143C", "description": "Crimson red" },
-  "00CED1": { "hex": "#00CED1", "description": "Dark cyan" },
-  "006400": { "hex": "#006400", "description": "Dark green" },
+  "00008B": { "hex": "#00008B", "description": "Dark blue" },
+  "008B8B": { "hex": "#008B8B", "description": "Dark cyan" },
   "A9A9A9": { "hex": "#A9A9A9", "description": "Dark gray" },
-  "8B0000": { "hex": "#8B0000", "description": "Dark red" },
+  "006400": { "hex": "#006400", "description": "Dark green" },
+  "BDB76B": { "hex": "#BDB76B", "description": "Dark khaki" },
+  "8B008B": { "hex": "#8B008B", "description": "Dark magenta" },
+  "556B2F": { "hex": "#556B2F", "description": "Dark olive green" },
   "FF8C00": { "hex": "#FF8C00", "description": "Dark orange" },
   "9932CC": { "hex": "#9932CC", "description": "Dark orchid" },
+  "8B0000": { "hex": "#8B0000", "description": "Dark red" },
+  "E9967A": { "hex": "#E9967A", "description": "Dark salmon" },
+  "8FBC8F": { "hex": "#8FBC8F", "description": "Dark sea green" },
+  "483D8B": { "hex": "#483D8B", "description": "Dark slate blue" },
+  "2F4F4F": { "hex": "#2F4F4F", "description": "Dark slate gray" },
+  "00CED1": { "hex": "#00CED1", "description": "Dark turquoise" },
+  "9400D3": { "hex": "#9400D3", "description": "Dark violet" },
   "FF1493": { "hex": "#FF1493", "description": "Deep pink" },
   "00BFFF": { "hex": "#00BFFF", "description": "Deep sky blue" },
+  "696969": { "hex": "#696969", "description": "Dim gray" },
+  "1E90FF": { "hex": "#1E90FF", "description": "Dodger blue" },
+  "B22222": { "hex": "#B22222", "description": "Firebrick" },
+  "FFFAF0": { "hex": "#FFFAF0", "description": "Floral white" },
+  "228B22": { "hex": "#228B22", "description": "Forest green" },
   "FFD700": { "hex": "#FFD700", "description": "Gold" },
   "DAA520": { "hex": "#DAA520", "description": "Goldenrod" },
-  "B22222": { "hex": "#B22222", "description": "Firebrick" },
-  "228B22": { "hex": "#228B22", "description": "Forest green" },
   "ADFF2F": { "hex": "#ADFF2F", "description": "Green yellow" },
   "808080": { "hex": "#808080", "description": "Gray" },
+  "F0FFF0": { "hex": "#F0FFF0", "description": "Honeydew" },
   "FF69B4": { "hex": "#FF69B4", "description": "Hot pink" },
   "CD5C5C": { "hex": "#CD5C5C", "description": "Indian red" },
   "4B0082": { "hex": "#4B0082", "description": "Indigo" },
+  "FFFFF0": { "hex": "#FFFFF0", "description": "Ivory" },
+  "F0E68C": { "hex": "#F0E68C", "description": "Khaki" },
   "E6E6FA": { "hex": "#E6E6FA", "description": "Lavender" },
-  "D3D3D3": { "hex": "#D3D3D3", "description": "Light gray" },
-  "90EE90": { "hex": "#90EE90", "description": "Light green" },
+  "FFF0F5": { "hex": "#FFF0F5", "description": "Lavender blush" },
+  "7CFC00": { "hex": "#7CFC00", "description": "Lawn green" },
+  "FFFACD": { "hex": "#FFFACD", "description": "Lemon chiffon" },
+  "ADD8E6": { "hex": "#ADD8E6", "description": "Light blue" },
   "F08080": { "hex": "#F08080", "description": "Light coral" },
   "E0FFFF": { "hex": "#E0FFFF", "description": "Light cyan" },
   "FAFAD2": { "hex": "#FAFAD2", "description": "Light goldenrod" },
+  "D3D3D3": { "hex": "#D3D3D3", "description": "Light gray" },
+  "90EE90": { "hex": "#90EE90", "description": "Light green" },
   "FFB6C1": { "hex": "#FFB6C1", "description": "Light pink" },
+  "FFA07A": { "hex": "#FFA07A", "description": "Light salmon" },
+  "20B2AA": { "hex": "#20B2AA", "description": "Light sea green" },
+  "87CEFA": { "hex": "#87CEFA", "description": "Light sky blue" },
+  "778899": { "hex": "#778899", "description": "Light slate gray" },
+  "B0C4DE": { "hex": "#B0C4DE", "description": "Light steel blue" },
+  "FFFFE0": { "hex": "#FFFFE0", "description": "Light yellow" },
   "32CD32": { "hex": "#32CD32", "description": "Lime green" },
   "FAF0E6": { "hex": "#FAF0E6", "description": "Linen" },
   "FF00FF": { "hex": "#FF00FF", "description": "Magenta" },
+  "800000": { "hex": "#800000", "description": "Maroon" },
+  "66CDAA": { "hex": "#66CDAA", "description": "Medium aquamarine" },
+  "0000CD": { "hex": "#0000CD", "description": "Medium blue" },
   "BA55D3": { "hex": "#BA55D3", "description": "Medium orchid" },
+  "9370DB": { "hex": "#9370DB", "description": "Medium purple" },
   "3CB371": { "hex": "#3CB371", "description": "Medium sea green" },
+  "7B68EE": { "hex": "#7B68EE", "description": "Medium slate blue" },
+  "00FA9A": { "hex": "#00FA9A", "description": "Medium spring green" },
+  "48D1CC": { "hex": "#48D1CC", "description": "Medium turquoise" },
   "C71585": { "hex": "#C71585", "description": "Medium violet red" },
+  "191970": { "hex": "#191970", "description": "Midnight blue" },
   "F5FFFA": { "hex": "#F5FFFA", "description": "Mint cream" },
   "FFE4B5": { "hex": "#FFE4B5", "description": "Moccasin" },
+  "FFDEAD": { "hex": "#FFDEAD", "description": "Navajo white" },
   "000080": { "hex": "#000080", "description": "Navy" },
+  "FDF5E6": { "hex": "#FDF5E6", "description": "Old lace" },
   "808000": { "hex": "#808000", "description": "Olive" },
+  "6B8E23": { "hex": "#6B8E23", "description": "Olive drab" },
   "FFA500": { "hex": "#FFA500", "description": "Orange" },
+  "FF4500": { "hex": "#FF4500", "description": "Orange red" },
+  "DA70D6": { "hex": "#DA70D6", "description": "Orchid" },
+  "EEE8AA": { "hex": "#EEE8AA", "description": "Pale goldenrod" },
+  "98FB98": { "hex": "#98FB98", "description": "Pale green" },
+  "AFEEEE": { "hex": "#AFEEEE", "description": "Pale turquoise" },
+  "DB7093": { "hex": "#DB7093", "description": "Pale violet red" },
   "FFEFD5": { "hex": "#FFEFD5", "description": "Papaya whip" },
   "FFDAB9": { "hex": "#FFDAB9", "description": "Peach puff" },
+  "CD853F": { "hex": "#CD853F", "description": "Peru" },
+  "FFC0CB": { "hex": "#FFC0CB", "description": "Pink" },
   "DDA0DD": { "hex": "#DDA0DD", "description": "Plum" },
   "B0E0E6": { "hex": "#B0E0E6", "description": "Powder blue" },
   "800080": { "hex": "#800080", "description": "Purple" },
+  "663399": { "hex": "#663399", "description": "Rebecca purple" },
+  "FF0000": { "hex": "#FF0000", "description": "Red" },
+  "BC8F8F": { "hex": "#BC8F8F", "description": "Rosy brown" },
   "4169E1": { "hex": "#4169E1", "description": "Royal blue" },
-  "87CEEB": { "hex": "#87CEEB", "description": "Sky blue" },
   "8B4513": { "hex": "#8B4513", "description": "Saddle brown" },
-  "F4A460": { "hex": "#F4A460", "description": "Sandy brown" },
   "FA8072": { "hex": "#FA8072", "description": "Salmon" },
-  "FFF5EE": { "hex": "#FFF5EE", "description": "Seashell" },
+  "F4A460": { "hex": "#F4A460", "description": "Sandy brown" },
   "2E8B57": { "hex": "#2E8B57", "description": "Sea green" },
+  "FFF5EE": { "hex": "#FFF5EE", "description": "Seashell" },
   "A0522D": { "hex": "#A0522D", "description": "Sienna" },
   "C0C0C0": { "hex": "#C0C0C0", "description": "Silver" },
+  "87CEEB": { "hex": "#87CEEB", "description": "Sky blue" },
+  "6A5ACD": { "hex": "#6A5ACD", "description": "Slate blue" },
+  "708090": { "hex": "#708090", "description": "Slate gray" },
+  "FFFAFA": { "hex": "#FFFAFA", "description": "Snow" },
   "4682B4": { "hex": "#4682B4", "description": "Steel blue" },
   "D2B48C": { "hex": "#D2B48C", "description": "Tan" },
   "D8BFD8": { "hex": "#D8BFD8", "description": "Thistle" },
@@ -67,5 +129,7 @@
   "EE82EE": { "hex": "#EE82EE", "description": "Violet" },
   "F5DEB3": { "hex": "#F5DEB3", "description": "Wheat" },
   "FFFFFF": { "hex": "#FFFFFF", "description": "White" },
-  "FFFF00": { "hex": "#FFFF00", "description": "Yellow" }
+  "F5F5F5": { "hex": "#F5F5F5", "description": "White smoke" },
+  "FFFF00": { "hex": "#FFFF00", "description": "Yellow" },
+  "9ACD32": { "hex": "#9ACD32", "description": "Yellow green" }
 }
